--- a/02_index.html
+++ b/02_index.html
@@ -72,46 +72,50 @@
 
    <main id="main">
 
+
     <section class="section">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+          <div class="col-md-12" data-aos="fade-up">
+            <h2>02: 2D design & cutting</h2>
           </div>
         </div>
       </div>
 
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/img_1_big.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="sticky-content">
-                <h3 class="h3">Boxed Water</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
-
-                <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
-
-                </div>
-
-                <h4 class="h4 mb-3">What I did</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
-                </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
-              </div>
-            </div>
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Intro to Fusion360</h3>
+            <p>I started my 2D Design journey in Fusion360 by exploring a few tutorials and trying out some basic commands. To put those skills to the test, I sketched a teddy bear using commands such as: ellipse, triangle, spline, fillet, mirror, trim, move, rotate, and setting constraints.</p>
+            <p>I thought it would be cute but it turned out kind of creepy. Oh well.</p>
+          </div>
+          <div class ="col-md-1 ml-auto"></div>
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <img src="02_2D/teddybear_grid.png" alt="Image" class="img-fluid">
           </div>
         </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Press-fit construction kit</h3>
+            <p>I just got desk space in Gund (!!!) and have been on a decorating spree. I’ve been in need of something to hold paper and files and thought this assignment would be the perfect opportunity to create something for it. I got inspiration from one of my favourite coffee shop interiors and sketched out a paper rack.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/perception.jpeg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-8" data-aos="fade-up">
+            <img src="02_2D/wavesketch.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
     </section>
 
 
