--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               <div class="work-info">
                 <h3>02: 2D design & cutting</h3>
               </div>
-              <img class="img-fluid" src="02_2D/thumbnail1square.jpg">
+              <img class="img-fluid" src="02_2D/Thumbnail1square.JPG">
             </a>
           </div>
           <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
