--- a/02_index.html
+++ b/02_index.html
@@ -84,13 +84,13 @@
 
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="h3">Intro to Fusion360</h3>
             <p>I started my 2D Design journey in Fusion360 by exploring a few tutorials and trying out some basic commands. To put those skills to the test, I sketched a teddy bear using commands such as: ellipse, triangle, spline, fillet, mirror, trim, move, rotate, and setting constraints.</p>
             <p>I thought it would be cute but it turned out kind of creepy. Oh well.</p>
           </div>
           <div class ="col-md-1 ml-auto"></div>
-          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-4" data-aos="fade-up">
             <img src="02_2D/teddybear_grid.png" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -112,6 +112,70 @@
           </div>
           <div class="col-md-8" data-aos="fade-up">
             <img src="02_2D/wavesketch.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+            <p>In the first iteration, I used Fusion360 to create sketches of three different "wave" forms and base structures. I made the base angled so that you could better see the different layers of the waves. After assembling them, I realized I made the slots too long so the base pieces were sticking out on the lower parts of the wave.</p>
+            <p>I also felt that grouping each wave form together wasn't as interesting and decided to alternate them instead in the next iteration.</p>
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/v1_wave_sketch.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/v1_wave_side.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <p>In the second version, you can see that I created four "steps" and alternated each wave form on each step to creating a more interesting visual effect. I also learned how to prepare my file as a .dxf for laser cutting!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/v2_wave_dxf.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/v2_wave_side.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="02_2D/v2_wave_front.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <p>I used a slot width of 3.5mm to account for the kerf. In the test cut, it fit pretty snug so I printed the rest using the same width.</p>
+            <p>Once I printed all the pieces and tried assembling it, I realized the width was actually a tad bit too narrow so it was difficult to piece everything together. I ended up using only 3 of the 5 base slots because a) it was too difficult to slot together all of them and b) I underestimated how strong cardboard is - 3 base pieces were more than enough!</p>
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="02_2D/lasercut1.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="02_2D/lasercut2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="02_2D/wave_desk1.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="02_2D/wave_desk2.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
