--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="02_index.html" class="item-wrap fancybox">
               <div class="work-info">
-                <h3>02: 2D design & cutting</h3>
+                <h3>02: 2d design & cutting</h3>
               </div>
               <img class="img-fluid" src="02_2D/Thumbnail1square.JPG">
             </a>
