--- a/02_index.html
+++ b/02_index.html
@@ -77,20 +77,19 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
-            <h2>02: 2D design & cutting</h2>
+            <h2>02: 2D design and cutting</h2>
           </div>
         </div>
       </div>
 
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <h3 class="h3">Intro to Fusion360</h3>
-            <p>I started my 2D Design journey in Fusion360 by exploring a few tutorials and trying out some basic commands. To put those skills to the test, I sketched a teddy bear using commands such as: ellipse, triangle, spline, fillet, mirror, trim, move, rotate, and setting constraints.</p>
-            <p>I thought it would be cute but it turned out kind of creepy. Oh well.</p>
+            <p>I started my 2D Design journey in Fusion360 by exploring a few tutorials and trying out some basic commands. To put those skills to the test, I sketched a "zombie" teddy bear using commands such as: ellipse, triangle, spline, fillet, mirror, trim, move, rotate, and setting constraints. I thought it would be cute but it turned out kind of creepy. Oh well.</p>
           </div>
           <div class ="col-md-1 ml-auto"></div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-6" data-aos="fade-up">
             <img src="02_2D/teddybear_grid.png" alt="Image" class="img-fluid">
           </div>
         </div>
@@ -172,10 +171,10 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-6" data-aos="fade-up">
-            <img src="02_2D/wave_desk1.jpg" alt="Image" class="img-fluid">
+            <img src="02_2D/wave_desk2.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-6" data-aos="fade-up">
-            <img src="02_2D/wave_desk2.jpg" alt="Image" class="img-fluid">
+            <img src="02_2D/wave_desk1.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
