--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               <div class="work-info">
                 <h3>03: hand tools & fabrication</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="03_mechanical/kinetic_fusionmodel.png">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
