--- a/01_index.html
+++ b/01_index.html
@@ -77,21 +77,52 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
-            <h2>01: intro</h2>
+            <h2>01: intro and inspo</h2>
           </div>
         </div>
       </div>
 
       <div class="container">
         <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Final Project Inspiration and Story</h3>
+            <p>I spent a lot of time in the new SEC building last semester and was amused everytime I walked by this interactive art installation. (Shoutout to my dad in the GIF!) I was intrigued by the way the installation could sense movement and essentially create a mirror of me in another form. It made me wonder if this concept could go beyond entertainment and convey a more impactful message. I also came across another interactive kinetic installation that invites the viewer to reflect on the growing plastic problem in our oceans by projecting their reflection as plastic floating in the water.</p>
+          </div>
+          <div class="col-md-1" data-aos="fade-up"></div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="01_intro/SECart.gif" alt="Image" class="img-fluid">
+          </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="h3">Final Project Idea</h3>
-            <p>tbd</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/_Gs8gWRMS-o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
 
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Opportunity</h3>
+            <p>For my final project, I hope to create some kind of interactive kinetic art installation that tells a meaningful story and incites delight. I'm interested in using sensors to detect motion and translate that into a responsive kinetic, light, and maybe audio output.</p>
+          </div>
+        </div>
+      </div>
 
+      <div class="container">
+        <div class="row mb-4 align-items-center">
+          <div class="col-md-12" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Other references</h3>
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="01_intro/Ref1.jpeg" width="300" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="01_intro/Ref2.jpeg" width="300" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="01_intro/Ref4.jpeg" width="300" alt="Image" class="img-fluid">
+          </div>
+          </div>
+      </div>
 
     </section>
 
