--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <img class="img-fluid" src="02_2D/Thumbnail1square.JPG">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="03_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>03: hand tools & fabrication</h3>
