--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
           </div>
         </div>
         <div id="portfolio-grid" class="row no-gutter" data-aos="fade-up" data-aos-delay="200">
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="01_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>01: intro</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="01_intro/Thumbnail.png">
             </a>
           </div>
           <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
@@ -111,7 +111,7 @@
               <img class="img-fluid" src="03_mechanical/Thumbnail1square.jpg">
             </a>
           </div>
-          <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>04: 3D design & printing</h3>
