Week 4 (in progress)

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           </div>
           <div class="col-md-12 col-lg-6 text-start text-lg-end" data-aos="fade-up" data-aos-delay="100">
             <div id="filters" class="filters">
-              <a href="#" data-filter="*" class="active">All</a>
-              <a href="#" data-filter=".inprogress">In Progress</a>
-              <a href="#" data-filter=".complete">Complete</a>
-              <a href="#" data-filter=".notstarted">Not Started</a>
+              <a href="#" data-filter="*" class="active">ALL</a>
+              <a href="#" data-filter=".inprogress">IN PROGRESS</a>
+              <a href="#" data-filter=".complete">COMPLETE</a>
+              <a href="#" data-filter=".notstarted">NOT STARTED</a>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
             </a>
           </div>
           <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
-            <a href="" class="item-wrap fancybox">
+            <a href="04_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>04: 3D design & printing</h3>
               </div>
