--- a/04_index.html
+++ b/04_index.html
@@ -72,90 +72,139 @@
 
    <main id="main">
 
+
     <section class="section">
       <div class="container">
         <div class="row mb-4 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <h2>Work Single Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis explicabo inventore.</p>
+          <div class="col-md-12" data-aos="fade-up">
+            <h2>04: 3D design and printing</h2>
           </div>
         </div>
       </div>
 
-      <div class="site-section pb-0">
-        <div class="container">
-          <div class="row align-items-stretch">
-            <div class="col-md-8" data-aos="fade-up">
-              <img src="assets/img/img_1_big.jpg" alt="Image" class="img-fluid">
-            </div>
-            <div class="col-md-3 ml-auto" data-aos="fade-up" data-aos-delay="100">
-              <div class="sticky-content">
-                <h3 class="h3">Boxed Water</h3>
-                <p class="mb-4"><span class="text-muted">Design</span></p>
-
-                <div class="mb-5">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores illo, id recusandae molestias
-                    illum unde pariatur, enim tempora.</p>
-
-                </div>
-
-                <h4 class="h4 mb-3">What I did</h4>
-                <ul class="list-unstyled list-line mb-5">
-                  <li>Design</li>
-                  <li>HTML5/CSS3</li>
-                  <li>CMS</li>
-                  <li>Logo</li>
-                </ul>
-
-                <p><a href="#" class="readmore">Visit Website</a></p>
-              </div>
-            </div>
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="h3">Photogrammetry</h3>
+            <p>For the photogrammatery assignment, I used the Polycam App on iOS to scan a plant. I tried both the LiDAR & photo scanner. Although the LiDAR scan processed much more quickly (~3min vs. 15min), there were gaping holes in the model and it also scanned a part of the back wall. I tried it a few times with no luck. As the comparison chart shows, the LiDAR scanner is better for spaces while photos are better for objects that require more preicision. </p>
+          </div>
+          <div class="col-md-1" data-aos="fade-up"></div>
+          <div class="col-md-2" data-aos="fade-up">
+            <img src="04_3D/lidarvsphoto.PNG" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-2" data-aos="fade-up">
+            <img src="04_3D/lidarprocess.PNG" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-2" data-aos="fade-up">
+            <img src="04_3D/photoprocess.PNG" alt="Image" class="img-fluid">
           </div>
         </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/lidarvideo.gif" alt="Image" class="img-fluid">
+            <figcaption>LiDAR scan output</figcaption>
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/photovid.gif" alt="Image" class="img-fluid">
+            <figcaption>Photo scan output</figcaption>
+          </div>
+        </div>
+        <br>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up">
+            <h3 class="h3">3D Printing - test run</h3>
+            <p>For my test print, I quickly modelled a vase in Fusion360 using the revolve command. The first print failed because I scaled down the vase so it would print faster and it ended up being too thin. The second print also failed halfway, but third time was the charm!</p>
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/vasefusion1.png" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/vasefusion2.png" alt="Image" class="img-fluid">
+          </div>
+      </div>
+      <br>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/vasefail.JPG" alt="Image" class="img-fluid">
+            <figcaption>Failed prints :(</figcaption>
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/vaseprint.JPG" alt="Image" class="img-fluid">
+            <figcaption>Printing in action</figcaption>
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/vase2.JPG" alt="Image" class="img-fluid">
+            <figcaption>She survived!</figcaption>
+          </div>
+        </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up">
+            <h3 class="h3">3D Printing - Eames Chair LCW</h3>
+            <p>I wanted to challenge myself this week and learn how to model in Rhino. I decided to model the Eames LCW Chair since it contained many curves and undercuts which would be difficult to make using other subtractive methods. It also gave me the opportunity to learn a ton of Rhino commands such as: sweep1, loft, offsetsrf, edgesrf, cap, boolean union/split, rebuild, orientonsrf, filletedge, and more.</p>
+            <p>I started by creating sketches of the front, side and top views of the chair. Then, I created 3D shapes using the 2D sketch as a guide. This took a lot of time (10+ hours!) since it was my first time figuring out all the Rhino commands and there were so many curves and angles. </p>
+          </div>
+          <div class="col-md-2" data-aos="fade-up"></div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/eames_front.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/eames_sketch.png" alt=" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/eames_3D.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up">
+            <p>3D printing turned out to be an even greater challenge than modelling. Instead of printing the entire chair, I exploded it into separate parts as I realized that if there were support structures between the seat and the back structure, it would be impossible to take out. However, I still ran into several issues with each print - either I wasn't able to remove the support structure (I tried using pliers and sanding it down, but it took hours and didn't work well) or the print failed.</p>
+          </div>
+          <div class="col-md-1" data-aos="fade-up"></div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/prusa1.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/print_fail1.jpg" alt="Image" class="img-fluid">
+            <figcaption>Print failed :(</figcaption>
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/print_fail2.jpg" alt="Image" class="img-fluid">
+            <figcaption>Print succeeded :)</figcaption>
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/print_fail3.jpg" alt="Image" class="img-fluid">
+            <figcaption>Couldn't remove support easily :(</figcaption>
+          </div>
+          <div class="col-md-3" data-aos="fade-up">
+            <img src="04_3D/print_fail4.jpg" alt="Image" class="img-fluid">
+            <figcaption>Removed support but print didn't finish :(</figcaption>
+          </div>
+        </div>
+
     </section>
 
-    <!-- ======= Testimonials Section ======= -->
-    <section class="section pt-0">
-      <div class="container">
-
-        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper">
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_1.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Jean Hicks</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-wrap">
-                <div class="testimonial">
-                  <img src="assets/img/person_2.jpg" alt="Image" class="img-fluid">
-                  <blockquote>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam necessitatibus incidunt ut officiis
-                      explicabo inventore.</p>
-                  </blockquote>
-                  <p>&mdash; Chris Stanworth</p>
-                </div>
-              </div>
-            </div><!-- End testimonial item -->
-
-          </div>
-          <div class="swiper-pagination"></div>
-        </div>
-
-      </div>
-    </section><!-- End Testimonials Section -->
 
   </main><!-- End #main -->
-  
+
 
   <!-- ======= Footer ======= -->
   <footer class="footer" role="contentinfo">
