--- a/03_index.html
+++ b/03_index.html
@@ -75,7 +75,7 @@
 
     <section class="section">
       <div class="container">
-        <div class="row mb-4 align-items-center">
+        <div class="row mb-2 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
             <h2>03: hand tools and fabrication</h2>
           </div>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="container">
-        <div class="row mb-4 align-items-center">
+        <div class="row mb-2 align-items-center">
           <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
             <h3 class="h3">Kinetic Sculpture</h3>
             <p>This week, we were tasked with creating a kinetic sculpture. I was inspired by a <a href="https://youtu.be/iDwH6RhKByY?t=5">Japanese woodworker on Youtube</a>. I modelled a spiral in Fusion360 and was curious to see what it would look like before committing to laser cutting it so I created joints with the pieces and animated it!</p>
@@ -97,11 +97,12 @@
         </div>
       </div>
 
+
       <div class="container">
-        <div class="row mb-8 align-items-center">
+        <div class="row mb-5 align-items-center">
           <div class="col-md-4" data-aos="fade-up">
-            <p>I went through a lot of trial and error to figure out how to attach the spiral to the dowel and motor and making sure the pieces weren't too tight/loose. I then attached the motor to see if it could actually turn the spiral -  it worked!</p>
-            <p>I also added another piece to the inside of the axel to prevent the dowel from sliding outwards when it spins.</p>
+            <p>I created two wheels: the small one to attach the motor to, and a large one to attach the dowel to. Through trial and error, I realized that I needed to stick two small wheels together to secure the motor in place. I later used the laser cutting software to create a third, even smaller wheel to add the inside of the frame so that the dowel wouldn't slide out while the motor was running.</p>
+            <img src="03_mechanical/gears.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-4" data-aos="fade-up">
             <img src="03_mechanical/wheeltest.gif" alt="Image" class="img-fluid">
@@ -112,10 +113,15 @@
         </div>
 
       <div class="container">
-        <div class="row mb-8 align-items-center">
+        <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
            <p><br>Because I wanted the spirals to rotate in opposite directions, I had to use two motors. I realized that if the spirals are too close to the side panel, then it would be hard to see the illusion effect straight on or from an angle, so I increased the length of the dowel. After asssembling all the pieces, I connected both motors to a breadboard and then hooked them up to the power supply.</p>
           </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-4 align-items-center">
           <div class="col-md-3" data-aos="fade-up">
             <img src="03_mechanical/wheel4.JPG" alt="Image" class="img-fluid">
           </div>
@@ -128,12 +134,19 @@
           <div class="col-md-3" data-aos="fade-up">
             <img src="03_mechanical/wheelgif3.gif" alt="Image" class="img-fluid">
           </div>
+      </div>
+
+      <div class="container">
+        <div class="row mb-5 align-items-center">
           <div class="col-md-12" data-aos="fade-up">
             <h3 class="h3"><br>Improvements</h3>
             <p>Because the motor was attached freely to the axel, it would wiggle around a lot or fall off if I increased the voltage too much. In the next iteration, I would add a structure to the outside of the side panel to secure the motor in place. I'd also add a potentiometer to the circuit and connect it to an Arduino so I can power it using my laptop or a battery.</p>
             <p>Another area of improvement is to bring the two spirals closer together by making the base piece a bit shorter. I secured the dowels and frame pieces before I attached the spiral, so by the time I realized they were too far apart, it was too late to change the dowel or shorten the frame. Next time I'll know to test-assmeble everything before securing them in place!</p>
           </div>
       </div>
+
+
+
     </section>
 
 
