Week 4 (updated) + compressed images
Compressed all images from Weeks 1-4

--- a/02_index.html
+++ b/02_index.html
@@ -107,7 +107,7 @@
       <div class="container">
         <div class="row mb-4 align-items-center">
           <div class="col-md-4" data-aos="fade-up">
-            <img src="02_2D/perception.jpeg" alt="Image" class="img-fluid">
+            <img src="02_2D/perception.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-8" data-aos="fade-up">
             <img src="02_2D/wavesketch.jpg" alt="Image" class="img-fluid">
