--- a/04_index.html
+++ b/04_index.html
@@ -90,13 +90,13 @@
           </div>
           <div class="col-md-1" data-aos="fade-up"></div>
           <div class="col-md-2" data-aos="fade-up">
-            <img src="04_3D/lidarvsphoto.PNG" alt="Image" class="img-fluid">
+            <img src="04_3D/lidarvsphoto.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-2" data-aos="fade-up">
-            <img src="04_3D/lidarprocess.PNG" alt="Image" class="img-fluid">
+            <img src="04_3D/lidarprocess.jpg" alt="Image" class="img-fluid">
           </div>
           <div class="col-md-2" data-aos="fade-up">
-            <img src="04_3D/photoprocess.PNG" alt="Image" class="img-fluid">
+            <img src="04_3D/photoprocess.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
       </div>
@@ -172,7 +172,8 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-5" data-aos="fade-up">
-            <p>3D printing turned out to be an even greater challenge than modelling. Instead of printing the entire chair, I exploded it into separate parts as I realized that if there were support structures between the seat and the back structure, it would be impossible to take out. However, I still ran into several issues with each print - either I wasn't able to remove the support structure (I tried using pliers and sanding it down, but it took hours and didn't work well) or the print failed.</p>
+            <p>3D printing turned out to be an even greater challenge than modelling. Instead of printing the entire chair, I exploded it into separate parts as I realized that if there were support structures between the tiny gap between the seat and the back structure, it would be impossible to take out. However, I still ran into several issues with each print - the print either failed or I wasn't able to remove the support structure. I tried using pliers and sanding it down but it didn't work well. I assume it was either because of the filament or because the support structure was too thick.
+            </p>
           </div>
           <div class="col-md-1" data-aos="fade-up"></div>
           <div class="col-md-6" data-aos="fade-up">
@@ -199,6 +200,32 @@
             <figcaption>Removed support but print didn't finish :(</figcaption>
           </div>
         </div>
+
+     <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up">
+            <p>For the nth round of iterations, I shrunk the model a bit to save on printing time and turned the problematic pieces upright so that there would be less support structure, thus making it easier to remove.</p>
+          </div>
+          <div class="col-md-1" data-aos="fade-up"></div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/prusa2.png" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+
+
+     <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-5" data-aos="fade-up">
+            <p>And finally...the print succeeded!</p>
+          </div>
+          <div class="col-md-1" data-aos="fade-up"></div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/printsuccess.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
+
+
 
     </section>
 
