--- a/04_index.html
+++ b/04_index.html
@@ -225,6 +225,15 @@
           </div>
         </div>
 
+     <div class="container">
+        <div class="row mb-5 align-items-center">
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/chairfinal1.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-6" data-aos="fade-up">
+            <img src="04_3D/chairfinal2.jpg" alt="Image" class="img-fluid">
+          </div>
+        </div>
 
 
     </section>
