--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
               <img class="img-fluid" src="03_mechanical/Thumbnail1square.jpg">
             </a>
           </div>
-          <div class="item inprogress col-sm-6 col-md-4 col-lg-4 mb-4">
+          <div class="item complete col-sm-6 col-md-4 col-lg-4 mb-4">
             <a href="04_index.html" class="item-wrap fancybox">
               <div class="work-info">
                 <h3>04: 3D design & printing</h3>
               </div>
-              <img class="img-fluid" src="comingsoon.png">
+              <img class="img-fluid" src="04_3D/thumbnail.jpg">
             </a>
           </div>
           <div class="item notstarted col-sm-6 col-md-4 col-lg-4 mb-4">
