Week 4 (new photos)

--- a/04_index.html
+++ b/04_index.html
@@ -227,11 +227,14 @@
 
      <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-md-6" data-aos="fade-up">
-            <img src="04_3D/chairfinal1.jpg" alt="Image" class="img-fluid">
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/chairfinal3.jpg" alt="Image" class="img-fluid">
           </div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-4" data-aos="fade-up">
             <img src="04_3D/chairfinal2.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-md-4" data-aos="fade-up">
+            <img src="04_3D/chairfinal4.jpg" alt="Image" class="img-fluid">
           </div>
         </div>
 
