--- a/04_index.html
+++ b/04_index.html
@@ -218,9 +218,9 @@
         <div class="row mb-5 align-items-center">
           <div class="col-md-5" data-aos="fade-up">
             <p>And finally...the print succeeded!<br><br>
-            <a download href='04_3D/Chair3Dv3.7_3Dprint.3dm'>Download 3dm file</a><br>
-            <a download href='04_3D/eamesv4.stl'>Download STL file</a><br>
-            <a download href='04_3D/eamesLCW.gcode'>Download Gcode file</a></p>
+            <a download href='04_3D/Chair3Dv3.7_3Dprint.3dm' class="button">Download 3dm file</a><br><br>
+            <a download href='04_3D/eamesv4.stl' class="button">Download STL file</a><br><br>
+            <a download href='04_3D/eamesLCW.gcode' class="button">Download Gcode file</a></p>
           </div>
           <div class="col-md-1" data-aos="fade-up"></div>
           <div class="col-md-6" data-aos="fade-up">
